--- a/src/app/modules/products/list-products/list-products.component.html
+++ b/src/app/modules/products/list-products/list-products.component.html
@@ -1,10 +1,10 @@
 <div class="card pt-3">
     <form class="card-body" [formGroup]="searchForm">
         <div class="row">
-          <div class="form-group col-md-6">
+        <div class="form-group col-md-6">
             <label for="filter">Name Or Descrription:</label>
             <input type="text" class="form-control" id="filter" formControlName="filter">
-          </div>
+        </div>
         </div>
         <div class="row">
             <div class="form-group col-md-6">
@@ -17,12 +17,12 @@
                 </select>
             </div>
         </div>
-        </div>
+        </div> 
         <div class="row pt-3">
             <div class="text-right">
                 <button class="btn btn-primary" (click)="searchProducts()">Search</button>
                 
-             
+        
                 <button *ngIf="canCreate" class="btn btn-secondary m-2" (click)="addProduct()">Add Product</button>
                 <!-- *abpPermission="'EcommerceApp.Products.CreateEdit'" تخفي بها اي شي اذا ماكان يوجد صلاحية-
                <button *abpPermission="'EcommerceApp.Products.CreateEdit'" class="btn btn-secondary m-2" (click)="addProduct()">Add Product</button>-->
@@ -75,11 +75,18 @@
     [rows]="(products$ | async)?.items || []" 
     [count]="(products$ | async)?.totalCount || 0" 
     [columnMode]="'force'"
-    [headerHeight]="50" 
-    [footerHeight]="50" 
-    [rowHeight]="50"
-    [footerHeight]="50"
+    [headerHeight]="100" 
+    [footerHeight]="100" 
+    [rowHeight]="100"
+    [footerHeight]="100"
     [limit]="5">
+
+    <ngx-datatable-column name="Image" prop="imageUrl">
+        <ng-template let-row="row" ngx-datatable-cell-template>
+            <img [src]="row.imageUrl" alt="Image" style="width: 150px; height: 100px;" />
+        </ng-template>
+    </ngx-datatable-column>
+
     <ngx-datatable-column name="Name Arabic" prop="nameAr">
         <ng-template let-row="row" ngx-datatable-cell-template>
             {{ row.nameAr }}
@@ -99,12 +106,11 @@
         </ng-template>
     </ngx-datatable-column>
 
-    <ngx-datatable-column name="ImageUrl" prop="imageUrl">
+    <!--   <ngx-datatable-column name="ImageUrl" prop="imageUrl">
         <ng-template let-row="row" ngx-datatable-cell-template>
             {{row.imageUrl}}
         </ng-template>
-    </ngx-datatable-column>
-
+    </ngx-datatable-column>-->
 
     <ngx-datatable-column name="Description Arabic" prop="descriptionAr">
         <ng-template let-row="row" ngx-datatable-cell-template>
