--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,65 @@
-<div class="products-container">
+ <!--  <div class="products-container">
   <div class="product-card" *ngFor="let product of products">
     <img [src]="product.imageUrl" alt="{{product.nameAr}}">
     <h2>{{product.nameEn}}</h2>
     <p>{{product.descriptionAr}}</p>
     <p><strong>Price:</strong> ${{product.price}}</p>
-   <!-- <button class="btn btn-primary">Add to Cart</button>-->
+    <button class="btn btn-primary">Add to Cart</button>
+  </div>
+</div> -->
+
+<div class="container">
+  <div class="p-5 text-center">
+    <div class="d-inline-block bg-success text-white p-1 h5 rounded mb-4" role="alert">
+      <h5 class="m-1">
+        <i class="fas fa-rocket" aria-hidden="true"></i> 
+        <strong>EcommerceApp</strong> 
+      </h5>
+    </div>
+    <h1>{{ '::Welcome' | abpLocalization }}</h1>
+    <p class="lead px-lg-5 mx-lg-5">{{ '::LongWelcomeMessage' | abpLocalization }}</p>
+
+    <a (click)="login()" class="px-4 btn btn-primary ms-1" role="button">
+      <i class="fa fa-sign-in" aria-hidden="true"></i>
+      {{ 'AbpAccount::Login' | abpLocalization }}
+    </a>
   </div>
 </div>
+
+<!--
+<div *abpPermission="'EcommerceApp.Products.List'; else notAuthorized">
+  <div class="products-container" *ngIf="products && products.length > 0">
+    <div class="product-card" *ngFor="let product of products">
+      <img [src]="product.imageUrl" alt="{{product.nameAr}}">
+      <h2>{{product.nameEn}}</h2>
+      <p>{{product.descriptionAr}}</p>
+      <p><strong>Price:</strong> ${{product.price}}</p>
+      <button class="btn btn-primary">Add to Cart</button>
+    </div>
+  </div>
+  <div *ngIf="products.length === 0"> 
+    <p>No products available.</p>
+  </div>
+</div>
+
+<ng-template #notAuthorized>
+  <div class="container">
+    <div class="p-5 text-center">
+      <div class="d-inline-block bg-success text-white p-1 h5 rounded mb-4" role="alert">
+        <h5 class="m-1">
+          <i class="fas fa-rocket" aria-hidden="true"></i> Congratulations,
+          <strong>Demo1</strong> is successfully running!
+        </h5>
+      </div>
+      <h1>{{ '::Welcome' | abpLocalization }}</h1>
+      <p class="lead px-lg-5 mx-lg-5">{{ '::LongWelcomeMessage' | abpLocalization }}</p>
+
+      <a (click)="login()" class="px-4 btn btn-primary ms-1" role="button">
+        <i class="fa fa-sign-in" aria-hidden="true"></i>
+        {{ 'AbpAccount::Login' | abpLocalization }}
+      </a>
+    </div>
+  </div>
+</ng-template>-->
+
+
