--- a/src/app/modules/products/list-products/list-products.component.html
+++ b/src/app/modules/products/list-products/list-products.component.html
@@ -1,4 +1,4 @@
-<div class="card pt-3">
+<!--<div class="card pt-3">
     <form class="card-body" [formGroup]="searchForm">
         <div class="row">
         <div class="form-group col-md-6">
@@ -24,17 +24,44 @@
                 
         
                 <button *ngIf="canCreate" class="btn btn-secondary m-2" (click)="addProduct()">Add Product</button>
-                <!-- *abpPermission="'EcommerceApp.Products.CreateEdit'" تخفي بها اي شي اذا ماكان يوجد صلاحية-
-               <button *abpPermission="'EcommerceApp.Products.CreateEdit'" class="btn btn-secondary m-2" (click)="addProduct()">Add Product</button>-->
-                <!-- طريقه اخرى <button *ngIf="canCreate" class="btn btn-secondary m-2" (click)="addProduct()">Add Product</button> -->
+             
 
             </div>
         </div>
 
     </form>
-</div>
-
-
+</div> -->
+   <!-- *abpPermission="'EcommerceApp.Products.CreateEdit'" تخفي بها اي شي اذا ماكان يوجد صلاحية-
+               <button *abpPermission="'EcommerceApp.Products.CreateEdit'" class="btn btn-secondary m-2" (click)="addProduct()">Add Product</button>-->
+                <!-- طريقه اخرى <button *ngIf="canCreate" class="btn btn-secondary m-2" (click)="addProduct()">Add Product</button> -->
+<div class="card pt-3">
+    <form class="card-body" [formGroup]="searchForm">
+      <div class="row">
+        <div class="form-group col-md-4">
+          <label for="filter">Name Or Description:</label>
+          <input type="text" class="form-control" id="filter" formControlName="filter">
+        </div>
+  
+        <div class="form-group col-md-4">
+          <label for="categoryId" class="form-control-label">Category:</label>
+          <select formControlName="categoryId" class="form-control">
+            <option *ngFor="let category of categories; let i = index" [value]="category.id">
+              {{ category.nameEn }}
+            </option>
+          </select>
+        </div>
+      </div>
+      <div class="form-group col-md-4">
+      <div class="row pt-3">
+        <div class="text-right">
+          <button class="btn btn-primary" (click)="searchProducts()">Search</button>
+          <button *ngIf="canCreate" class="btn btn-secondary m-2" (click)="addProduct()">Add Product</button>
+        </div>
+      </div>
+      </div>
+    </form>
+ </div>
+  
 
 
 <!-- 
